--- a/HungarianAlgo/HungarianAlgo.vcxproj
+++ b/HungarianAlgo/HungarianAlgo.vcxproj
@@ -20,8 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0083897E-B58F-4D17-A071-EE83A4EEBA32}</ProjectGuid>
-    <RootNamespace>Threadan</RootNamespace>
+    <RootNamespace>HungarianAlgo</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>HungarianAlgo</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
